# BGMRPCDeploy

./: .gitmodules  BGMRPC.conf.in  CMakeLists.txt  JsModules.conf.in  README.md
etc/: BGMRPC.conf  IF_types.json  JsModules.conf
