cmake_minimum_required(VERSION 3.18)

include(cmake/BGMRPC.cmake)

install(
  DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin
  DESTINATION ${BGMRPC_REMOTE}
  COMPONENT BGMRPC_remote_deplay
  PATTERN "bin/*" PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
                              GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)

#install(
#  DIRECTORY logs apps data
#  DESTINATION ${BGMRPC_REMOTE}
#  DIRECTORY_PERMISSIONS
#    OWNER_READ
#    OWNER_WRITE
#    OWNER_EXECUTE
#    GROUP_READ
#    GROUP_WRITE
#    GROUP_EXECUTE
#    WORLD_READ
#    WORLD_WRITE
#    WORLD_EXECUTE
#  COMPONENT BGMRPC_remote_deplay)

install(
  DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/etc
  DESTINATION ${BGMRPC_REMOTE}
  COMPONENT BGMRPC_remote_deplay)
